--- a/site_1/lecture_4.html
+++ b/site_1/lecture_4.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>lecture 4!</title>
+  <meta charset="utf-8">
+  <title>webdev is cool!</title>
 </head>
 <body>
-<h1>hello!</h1>
+this Course is so Boring
 </body>
 
 </html>
