--- a/site_1/lecture_5.html
+++ b/site_1/lecture_5.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello</title>
+	<title>la tragica morte di Mitch</title>
 </head>
 <body>
-hello clauchard
+  <div center>ZEB:"come va?"</div>
+  <div center>Anna:"tutto bene,te?"</div>
+  <span center>ZEB rispose in tono serio:</span>
+  <div center>
+  	"mi è morto....
+  	<span>(ZEB diceva singhiozzando)</span>
+  	il gatto".
+  </div>
 </body>
 </html>
