--- a/site_1/lecture_7.html
+++ b/site_1/lecture_7.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Unordered lists</title>
 </head>
-<body></body>
+<body>
+	<h1>Unordered list</h1>
+	<div>
+		
+		My tipical shopping:
+        <ul>
+        <li>Milk</li>
+		<li>pasta</li>
+		<li>cookies:
+			<ul>
+			<li>flour</li>
+			<li>chocolate</li>
+			<li>eggs</li>
+		    </ul>
+		</li>
+		
+	    </ul>
+		
+
+	</div>
+</body>
 </html>
