--- a/site_1/lecture_9.html
+++ b/site_1/lecture_9.html
@@ -2,8 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Internal links</title>
+  <title>EXternal links</title>
 </head>
-<body>bla bla</body>
+<body>
+	<h1>External links</h1>
+	<section>
+		This the link to my facebook:
+		<a href="https://www.facebook.com/alberto.castelli.58152" target="_blank" title="add me as friend">
+			<div>This is my facebook, add me as friend!</div>
+		</a>
+	</section>
+</body>
 
 </html>
