--- a/site_1/lecture_9.1.html
+++ b/site_1/lecture_9.1.html
@@ -2,10 +2,50 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Links</title>
 </head>
 <body>
-ahhaha
+    <h1 id="top">Links to sections of the same page</h1>
+    <section>
+    	<ul>
+    		<li><a href="#section1">SECTION 1</a></li>
+    		<li><a href="#section2">SECTION 2</a></li>
+    		<li><a href="#section3">SECTION 3</a></li>
+    		<li><a href="#section4">SECTION 4</a></li>
+    	</ul>
+    </section>
+
+    <section id="section1">
+    	<h2>Section 1</h2>
+    	<p>Nato a Pirri, municipalità di Cagliari, e successivamente cresciuto a Sestu,[9] paese dell'hinterland del capoluogo sardo, iniziò a praticare il calcio circa all'età di tre anni e mezzo, fortemente influenzato dal padre, nella scuola calcio Gigi Riva, fondata dall'omonimo calciatore.[10][11] Sua madre, al contrario, non fu entusiasta dell'idea che il figlio volesse avvicinarsi al mondo calcistico, così lo convinse a provare il minibasket e, dopo una fugace esperienza, tornò nella stessa scuola calcio, dove si formò calcisticamente come centrocampista dalle indubbie qualità; infatti, fin da subito le doti di Nicolò apparirono evidenti tanto che i dirigenti del Cagliari ne notarono il talento e lo vollero immediatamente tesserare con loro.[12] Dunque, nel 2006, entrò nel settore giovanile del Cagliari, con cui giocò 40 gare segnando 3 reti.
+    	</p>
+    </section>
+
+
+    <section id="section2">
+    	<h2>section 2</h2>
+    	<p>Nato a Pirri, municipalità di Cagliari, e successivamente cresciuto a Sestu,[9] paese dell'hinterland del capoluogo sardo, iniziò a praticare il calcio circa all'età di tre anni e mezzo, fortemente influenzato dal padre, nella scuola calcio Gigi Riva, fondata dall'omonimo calciatore.[10][11] Sua madre, al contrario, non fu entusiasta dell'idea che il figlio volesse avvicinarsi al mondo calcistico, così lo convinse a provare il minibasket e, dopo una fugace esperienza, tornò nella stessa scuola calcio, dove si formò calcisticamente come centrocampista dalle indubbie qualità; infatti, fin da subito le doti di Nicolò apparirono evidenti tanto che i dirigenti del Cagliari ne notarono il talento e lo vollero immediatamente tesserare con loro.[12] Dunque, nel 2006, entrò nel settore giovanile del Cagliari, con cui giocò 40 gare segnando 3 reti.
+    	</p>
+    </section>
+
+    <section id="section3">
+    	<h2>section 3</h2>
+    	<p>Nato a Pirri, municipalità di Cagliari, e successivamente cresciuto a Sestu,[9] paese dell'hinterland del capoluogo sardo, iniziò a praticare il calcio circa all'età di tre anni e mezzo, fortemente influenzato dal padre, nella scuola calcio Gigi Riva, fondata dall'omonimo calciatore.[10][11] Sua madre, al contrario, non fu entusiasta dell'idea che il figlio volesse avvicinarsi al mondo calcistico, così lo convinse a provare il minibasket e, dopo una fugace esperienza, tornò nella stessa scuola calcio, dove si formò calcisticamente come centrocampista dalle indubbie qualità; infatti, fin da subito le doti di Nicolò apparirono evidenti tanto che i dirigenti del Cagliari ne notarono il talento e lo vollero immediatamente tesserare con loro.[12] Dunque, nel 2006, entrò nel settore giovanile del Cagliari, con cui giocò 40 gare segnando 3 reti.
+    	</p>
+    </section>
+
+
+    <section id="section4">
+    	<h2>section 4</h2>
+    	<p>Nato a Pirri, municipalità di Cagliari, e successivamente cresciuto a Sestu,[9] paese dell'hinterland del capoluogo sardo, iniziò a praticare il calcio circa all'età di tre anni e mezzo, fortemente influenzato dal padre, nella scuola calcio Gigi Riva, fondata dall'omonimo calciatore.[10][11] Sua madre, al contrario, non fu entusiasta dell'idea che il figlio volesse avvicinarsi al mondo calcistico, così lo convinse a provare il minibasket e, dopo una fugace esperienza, tornò nella stessa scuola calcio, dove si formò calcisticamente come centrocampista dalle indubbie qualità; infatti, fin da subito le doti di Nicolò apparirono evidenti tanto che i dirigenti del Cagliari ne notarono il talento e lo vollero immediatamente tesserare con loro.[12] Dunque, nel 2006, entrò nel settore giovanile del Cagliari, con cui giocò 40 gare segnando 3 reti.
+    	</p>
+    </section>
+
+    <section>
+    	<a href="#top">to the top</a>
+    </section>
+
+
 </body>
 
 </html>
