--- a/site_1/lecture_10.html
+++ b/site_1/lecture_10.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<p>
-		<img src="https://www.thoughtco.com/thmb/IAqFiC70ZKslBdDb_UvyL42G0oU=/2723x1948/filters:fill(auto,1)/GettyImages-3281432-roosevelt-56d3eb055f9b5879cc8ddad2.jpg" width="640" height="180">
+		<img src="https://www.thoughtco.com/thmb/IAqFiC70ZKslBdDb_UvyL42G0oU=/2723x1948/filters:fill(auto,1)/GettyImages-3281432-roosevelt-56d3eb055f9b5879cc8ddad2.jpg" width="540" height="360
+	    ">
 	</p>
 </body>
 
