--- a/site_1/css_synt.html
+++ b/site_1/css_synt.html
@@ -1,9 +1,34 @@
 <!doctype html>
 <html>
 <head>
-  <title>css</title>
+  <meta charset="utf-8">
+  <title>css sintassi</title>
+  <style >
+  	p{
+  		color: blue;
+  		font-size: 20px;
+  		width: 1000px;
+  	}
+
+  	h1{
+  		color: green;
+  		font-size: 38px;
+  		text-align: center;
+  	}
+
+  	.blue{
+  		color: yellow;
+  	}
+
+  </style>
 </head>
 <body>
+	<h1>sintassi in CSS</h1>
+	<h2>paragrafo 1</h2>
+	<p class="blue">in questa lezione tratteremo la sintassi in CSS per vedere il comportamentno del pagine per la stilizzazzione del contenute HTML e per la creazione di una esperinza migliore per l utente</p>
+	<h2>paragrafo 2</h2>
+	<p>buon divertimento forza inter!</p>
+
 	
 </body>
 
