--- a/site_1/css_synt.html
+++ b/site_1/css_synt.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>css sintassi</title>
+  <link rel="stylesheet" href="style.css">
   <style >
+
+  	h2{
+  		text-align: center;
+  	}
   	p{
   		color: blue;
-  		font-size: 20px;
   		width: 1000px;
   	}
 
   	h1{
   		color: green;
-  		font-size: 38px;
   		text-align: center;
   	}
 
