--- a/site_1/lecture_15.html
+++ b/site_1/lecture_15.html
@@ -4,6 +4,30 @@
 <meta charset="utf-8">
 <title>Pseudo Class Selectors</title>
 <style>
+  header li{
+    list-style: none;
+  }
+
+  a:link, a:visited{
+    text-decoration: none;
+    background-color: green;
+    color: black;
+    border: 1px solid blue;
+    display: block;
+    width: 200px;
+    text-align: center;
+    margin-bottom: 1px;
+
+  }
+
+  a:hover, a:active {
+    background-color: red;
+    color: purple;
+  }
+
+  header li:nth-child(3) {
+    font-size: 24px;
+  }
 
 
 
